Added firestore to save data and dagger/hilt